--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,19 @@
   },
   "homepage": "https://github.com/andrewmunn/ai-chat#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/validator": "^13.11.9",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -31,6 +39,7 @@
     "@types/node": "^20.11.27",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.7",
     "nock": "^13.5.4",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
